<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Waypoint Database</string>
    <string name="action_settings">Settings</string>
    <string name="rpc_url">http://192.168.1.6:8080/</string>
    <string name="label_waypoint">NEW WAYPOINT</string>
    <string name="label_name">Name</string>
    <string name="label_lat">Latitude</string>
    <string name="label_long">Longitude</string>
    <string name="label_elevation">Elevation</string>
    <string name="label_address">Address</string>
    <string name="label_category">Category</string>
    <string name="label_submit">Submit</string>
    <string name="label_remove">Remove</string>
    <string name="label_new">New Waypoint</string>
    <string name="message_waypoint">WAYPOINT</string>

</resources>
