<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FormActivity">

    <TextView
        android:id="@+id/text_waypoint"
        android:text="@string/label_waypoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/field_name"
        android:hint="@string/label_name"
        android:inputType="text"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_waypoint"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/field_lat"
        android:hint="@string/label_lat"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_name"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/field_long"
        android:hint="@string/label_long"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_lat"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/field_elevation"
        android:hint="@string/label_elevation"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_long"
        android:paddingTop="10dp" />

    <EditText
        android:id="@+id/field_address"
        android:hint="@string/label_address"
        android:inputType="text"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_elevation"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/label_category"
        android:text="@string/label_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/field_address"
        android:paddingTop="10dp" />

    <Spinner
        android:id="@+id/spinner_category"
        android:text="@string/label_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_category"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/button_submit"
        android:text="@string/label_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_category"
        android:onClick="submitWaypoint" />

    <Button
        android:id="@+id/button_remove"
        android:text="@string/label_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_submit"
        android:layout_toRightOf="@+id/button_submit"
        android:onClick="removeWaypoint" />

</RelativeLayout>
